emc2 (1:2.2.5~cvs) unstable; urgency=low

  * Include license statement for the 'Togl' software, which is incorporated
    in emc2
  * added m7i43_hm2, a driver for the Mesa 7i43 board with HostMot2
    firmware
  * axis: numeric keypad fix in prior version was incomplete
  * various documentation improvements 

 -- Jeff Epler <jepler@sds2.com>  Fri, 28 Mar 2008 09:28:11 -0500

emc2 (1:2.2.4) unstable; urgency=low

  * make xxxmach exit reliably with 'halcmd unload' (SF#1816781)
  * hook up encoder index for homing in the motenc sample configuration
  * axis: don't reset the interpreter during touch-off and reload.  This
    fixes the loss of modal settings from MDI, including tool length offset,
    fixing SF#1825638
  * stepconf: clarify that it is the ratio of teeth on each pulley that must
    be entered
  * hal_input: fix 'ZeroDivisionError' for absolute axes that report the same
    value for min and max
  * fix various inaccuracies in the documentation
  * halscope: fix the time displayed when mousing over a trace
  * axis: fix ctrl and - or = starting an unstoppable jog
  * axis: fix the numeric keypad with numlock on
  * task: fix the initial coordinate system offset (SF#1895693)
  * stepconf: fix "Both Limit"-type inputs (SF#1906640)
  * stepconf: fix "HOME_SEQUENCE" problem without full set of home inputs
    (SF#1906641)
  * stepconf: fix Z home and limit switches on lathes (SF#1910452)
  * stepconf: fix 'offset' value calculated for spindle speed control
  * stepconf: enable 'dither-pwm' for spindle speed control
  * traj planner: fix velocity 'bobble' between 1st and 2nd consecutive synced moves
  * halscope: fix 'sample every Nth time' function
  * configs/univstep: fix external estop in this configuration
  * pluto_step: fix for negative scale values (SF#1915407)
  * pluto_servo: fix for pwm+direction mode
  * stepconf: improve calculation of HOME_LATCH_VEL

 -- Jeff Epler <jepler@unpythonic.net>  Sun, 16 Mar 2008 12:15:28 -0500
