@@ -1453,7 +1453,7 @@ class App:
 	    widgets.testacc.set_increments(1,5)
 	    widgets.testamplitude.set_increments(1,5)
 	    widgets.testvel.set_range(0, maxvel)
-	    widgets.testacc.set_range(0, 360000)
+	    widgets.testacc.set_range(1, 360000)
 	    widgets.testamplitude.set_range(0, 1440)
 	    widgets.testvel.set_digits(1)
 	    widgets.testacc.set_digits(1)
@@ -1467,7 +1467,7 @@ class App:
 	    widgets.testacc.set_increments(1,5)
 	    widgets.testamplitude.set_increments(1,5)
 	    widgets.testvel.set_range(0, maxvel)
-	    widgets.testacc.set_range(0, 100000)
+	    widgets.testacc.set_range(1, 100000)
 	    widgets.testamplitude.set_range(0, 1000)
 	    widgets.testvel.set_digits(2)
 	    widgets.testacc.set_digits(2)
@@ -1481,7 +1481,7 @@ class App:
 	    widgets.testacc.set_increments(1,5)
 	    widgets.testamplitude.set_increments(.1,5)
 	    widgets.testvel.set_range(0, maxvel)
-	    widgets.testacc.set_range(0, 3600)
+	    widgets.testacc.set_range(1, 3600)
 	    widgets.testamplitude.set_range(0, 36)
 	    widgets.testvel.set_digits(1)
 	    widgets.testacc.set_digits(1)
