@@ -6,8 +6,10 @@ emc2 (1:2.2.5~cvs) unstable; urgency=low
     firmware
   * axis: numeric keypad fix in prior version was incomplete
   * various documentation improvements 
+  * stepconf: do not allow axis acceleration to be set to zero during an axis
+    test (SF#1938763)
 
- -- Jeff Epler <jepler@sds2.com>  Fri, 28 Mar 2008 09:28:11 -0500
+ -- Jeff Epler <jepler@unpythonic.net>  Wed,  9 Apr 2008 13:31:20 -0500
 
 emc2 (1:2.2.4) unstable; urgency=low
 
